tests/compile_fail/invalid_jitter.c
#define MRES_CONFIG_HEADER "invalid_jitter/mres_config.h"
#include "mres.h"

int main(void)
{
    return 0;
}
